--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,9 +4,51 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+    
+    <!-- Title Bar is horizontal with a single text view -->
+    <LinearLayout style="@style/TitleBar"
+            android:layout_width="fill_parent"
+        	android:layout_height="wrap_content">
+    	<TextView 		
+    		style="@style/TitleText"
+    		android:layout_width="fill_parent" 
+		    android:layout_height="wrap_content" 
+		    android:text="Android HTTP Server" />
+    
+    </LinearLayout>
+    
+    <!-- Main content is vertical linear, with a horizontal text view followed by a horizontal linear for control
+    buttons -->
+    <LinearLayout style="@style/Main">
+       
+	       <TextView  
+	        	style="@style/MainText"
+	       		android:id="@+id/status"
+		    	android:layout_width="fill_parent" 
+		    	android:layout_height="wrap_content" 
+		    	android:text="Tap on Start Server below to start serving"
+		    />
+		    
+		    <LinearLayout
+           		android:orientation="horizontal"
+            	android:layout_width="fill_parent"
+            	android:layout_height="wrap_content"
+            	android:layout_weight="1">
+
+	            <Button android:id="@+id/start"
+	            android:clickable="true"
+	                style="@style/MainButton"
+	                android:text="Start server"
+	                android:drawableTop="@drawable/start"/>
+	                
+	            <Button android:id="@+id/stop"
+	            android:hapticFeedbackEnabled="true"
+	                style="@style/MainButton"
+	                android:text="Stop server"
+	                android:drawableTop="@drawable/stop"/>
+
+        	</LinearLayout>
+        
+	</LinearLayout>
+
 </LinearLayout>
